--- a/_posts/2018-12-31-Welcome.md
+++ b/_posts/2018-12-31-Welcome.md
@@ -1,8 +1,7 @@
 ---
-title: "Welcome to Jekyll!"
+title: "Welcome"
 date: 2018-12-31 20:19:00 +0900
 categories: jekyll update
 ---
 
-first post
-welcome to jekyll
+TIL 작성 테스트
