--- a/_posts/2018-12-31-Welcome.md
+++ b/_posts/2018-12-31-Welcome.md
@@ -1,7 +1,8 @@
 ---
-title: "Welcome"
+title: "TIL test"
 date: 2018-12-31 20:19:00 +0900
-categories: jekyll update
+categories: TIL
 ---
 
 TIL 작성 테스트
+
